complete implementation of hadoop catalog and supporting classes within trino